--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -585,53 +585,49 @@ In summary, the 14-item IAS performed similarly to the original 21-item version,
 # General Discussion
 
 <!-- Aims -->
-The present study leveraged a number of existing datasets to provide a comprehensive evaluation of the IAS, examining both its structure (study 1) and its dispositional correlates (study 2). These studies offer novel insights into the conceptual interpretation, and practical applications of the IAS. In this discussion, these findings are contextualized within the broader landscape of interoception research.
+Across two studies, we used a mega-analytic approach combining data from 17 datasets with over 33 thousand participants to  provide the most comprehensive evaluation to date of the IAS including both its structure (Study 1) and dispositional correlates (Study 2). These studies offer new insights into the conceptual interpretation, and practical applications of the IAS, with suggestions for how researchers may use the IAS in future research. 
 
 <!-- Structural insights from Study 1 -->
 
-Study 1 re-analysed the IAS using complementary psychometric and network-based approaches. Across samples, seven stable item pairings emerged (Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar), yielding a refined 14-item structure with superior fit and cross-dataset stability compared to previously proposed unidimensional or bifactor models. These results challenge interpretations of the IAS as a single latent construct [e.g., @brand2023; @murphy2019] and instead suggest that it is best described as capturing multiple, interrelated but domain-specific clusters of bodily sensations.
+Study 1 challenges interpretations of the IAS as a single latent construct [e.g., @brand2023; @murphy2019] and instead suggests that the IAS is best described as capturing multiple, interrelated but domain-specific, clusters of bodily sensations. Across samples, seven stable item pairs emerged (Hungry–Thirsty, Urinate–Defecate, Muscles–Pain, Breathing–Heart, Cough–Sneeze, Wind–Burp, and Bruise–Blood sugar), yielding a refined 14-item structure with superior fit and cross-dataset stability compared to previously proposed unidimensional or bifactor models. 
 
-Unlike @lin2023, whose 12-item solution supported unidimensionality, the present findings suggest that local dependencies between items reflect meaningful theoretical coupling among functionally related sensations (e.g., Heart–Breathing). Such clustering likely mirrors the way bodily signals co-occur physiologically or phenomenologically (e.g., hunger with thirst, coughing with sneezing) and are therefore perceived and evaluated together. Perceived accuracy in one bodily system may generalize to conceptually or functionally linked sensations, yielding a clustered rather than continuous organization of interoceptive beliefs. 
+Unlike @lin2023, whose 12-item solution supported unidimensionality, Study 1 findings suggest that local dependencies between items reflect meaningful theoretical coupling among functionally related signals (e.g., Heart–Breathing). Such clustering likely mirrors the way bodily signals co-occur physiologically or phenomenologically (e.g., hunger with thirst, coughing with sneezing) and are therefore perceived and evaluated together. Perceived accuracy in one bodily system may generalize to conceptually or functionally linked sensations, yielding a cluster rather than continuous organization of interoceptive beliefs. 
 
-Consistent with this interpretation, self-reported interoceptive awareness across related bodily axes (e.g., cardiac and respiratory) tends to show positive associations [@garfinkel2016interoceptive], whereas objective measures of interoceptive accuracy across modalities typically show weak or absent correlations [@bruni2023interoception; @ferentzi2018interoceptive]. This dissociation indicates that actual interoceptive abilities are largely domain-specific, while subjective interoceptive beliefs generalize across functionally related systems. Accordingly, the present clustering likely reflects the conceptual organization of interoceptive beliefs, structured by perceived bodily interdependence, rather than a single general interoceptive capacity.
+Consistent with this interpretation, self-reported interoceptive sensibility across related bodily axes (e.g., cardiac and respiratory) show positive associations [@garfinkel2016interoceptive], whereas objective measures of interoceptive accuracy across modalities typically show weak or absent correlations [@bruni2023interoception; @ferentzi2018interoceptive]. This dissociation indicates that objective interoceptive performance  may be largely domain-specific whereas  subjective interoceptive beliefs may generalize across functionally related systems. We therefore interpret the present clustering as reflecting the conceptual organization of interoceptive beliefs which are structured by perceived bodily interdependence, as opposed to  a single general interoceptive capacity.
+
 
 <!-- Dispositional correlates and domain specificity (Study 2) -->
 
 <!-- Interoception and interoception-related -->
-Study 2 extended these findings by examining the IAS's associations with interoceptive, affective, personality, and belief-related traits. Consistent with prior work, the IAS correlated positively with adaptive aspects of interoceptive sensibility (e.g., MAIA subscales reflecting noticing, attention regulation, and body trust) and negatively with interoceptive difficulties, namely alexithymia and interoceptive confusion [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021].
+
+Study 2 extended these findings by examining the IAS’s associations with interoceptive, affective, personality, and belief-related traits. Consistent with previous research, the IAS correlated positively with adaptive aspects of interoceptive sensibility (e.g., MAIA subscales of reflecting noticing, attention regulation, and body trusting) and negatively with interoceptive difficulties, namely alexithymia and interoceptive confusion [e.g., @brand2023; @garfinkel2015knowing; @gaggero2021]. 
 
 <!-- Mood and psychopathological disorders domain specific -->
-Across dispositional constructs, individuals reporting higher symptoms of depression and anxiety tended to perceive themselves as less accurate in detecting bodily signals, in line with previous findings [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. Crucially, these associations were not uniform across bodily domains: the strongest, and most robust, effects involved drive-states (e.g., hunger, thirst), whereas regulatory systems, such as cardiorespiratory and expulsion domains showed weaker or inconsistent relationships. This domain specificity suggests that beliefs about one's gastrointestinal accuracy may be more psychologically and clinically relevant than beliefs about reflexive or surface sensations, and/or that the experience of these sensations is more salient and thus easier to accurately appraise, leading to meaningful variation across individuals.
+Also consistent with previous research, individuals reporting higher symptoms of depression and anxiety tended to perceive themselves as less accurate in detecting bodily signals [e.g., @brand2023; @khalsa2018; @nord2022interoceptive]. Crucially, however, these associations were not uniform across bodily domains. The strongest, and most robust, effects involved drive-states (e.g., hunger, thirst), whereas regulatory systems, such as cardiorespiratory and expulsion domains showed weaker or inconsistent relationships to anxiety and depression metrics. Such domain specificity implies either that beliefs about gastrointestinal accuracy are more psychologically and clinically relevant than beliefs about reflexive or surface sensations, or that the experience of these signals is more salient and easier to accurately appraise, leading to meaningful variation across individuals.
 
-This pattern may help clarify inconsistencies in the literature linking interoception and emotion. Reviews and meta-analyses report that performance-based measures of interoceptive accuracy, usually cardioception, often show weak or absent correlations with depression and anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association]. In contrast, self-reported interoceptive measures, which contain items relevant to multiple bodily domains, typically show stronger, often negative, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship]. 
+Patterns of domain-specific links to anxiety and depression  may explain inconsistencies in the literature linking interoception and emotion. Reviews and meta-analyses report that performance-based measures of interoceptive accuracy, usually cardioception, show weak or absent correlations with depression and anxiety [@jenkinson2024interoception; @banellis2025interoceptive; @adams2022association] whereas self-reported interoceptive measures, containing items relevant to multiple bodily domains, typically show stronger, often negative, associations with internalizing traits [e.g., @brand2022; @lin2023; @clemente2024relationship].  
 
-These discrepancies likely reflect both conceptual distinctions between perceptual accuracy and metacognitive self-belief [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards] and variation in the bodily domains assessed. The present results extend this framework by demonstrating that associations between interoceptive self-beliefs and affective traits are concentrated in psychologically salient visceral domains. Thus, the field's heavy reliance on cardioceptive tasks may have obscured more meaningful relationships in other interoceptive modalities.
+This discrepancy likely reflects both conceptual distinctions between perceptual accuracy and metacognitive beliefs [@khalsa2018; @garfinkel2015knowing; @suksasilp2022towards]  as well as variation in the bodily domains assessed. Study 2 results extend this idea by demonstrating that associations between interoceptive beliefs and affective traits are concentrated in psychologically salient visceral domains. Thus, the field’s heavy reliance on cardioceptive tasks may have obscured more meaningful relationships between affective traits and  other interoceptive modalities.
 
 <!-- Psychopathology -->
-Beyond mood, similar though weaker - patterns emerged for autistic traits, schizotypy, and maladaptive personality dimensions. These traits tended to correlate negatively with self-perceived interoceptive accuracy, particularly within visceral and musculoskeletal domains, while showing little or no association in other areas. This selective pattern suggests that diminished beliefs in bodily perception may contribute to specific social–emotional and personality features, rather than reflecting a general interoceptive deficit. 
+Beyond mood, similar albeit weaker  patterns emerged for autistic traits, schizotypy, and maladaptive personality dimensions. These traits tended to correlate negatively with subjective interoceptive accuracy, particularly for visceral and musculoskeletal domains but not other areas. This selective pattern suggests that, rather than reflecting a general interoceptive deficit, diminished beliefs in certain bodily domains may contribute to specific socio-emotional and personality features.. This idea fits well with  previous research showing that interoceptive self-beliefs are meaningfully related to emotional awareness, social connectedness, and psychopathology [@torregrossa2022interoceptive; @williams2023characterizing; @brand2022]. The present findings extend this literature by showing that such associations are likely domain-specific rather than global across all bodily systems.
 
-These results align with previous evidence showing that interoceptive self-beliefs are meaningfully related to emotional awareness, social connectedness, and psychopathology [@torregrossa2022interoceptive; @williams2023characterizing; @brand2022]. The present findings extend this literature by showing that these associations are domain-specific rather than global across bodily systems.
-
-Taken together, these findings suggest that self-perceived interoceptive accuracy is a differentiated construct, varying systematically across bodily systems. Beliefs about gastrointestinal sensations, in particular, show the most consistent associations with affective and dispositional features. Although modest in magnitude, these effects underscore the value of considering domain-specificity when linking interoceptive beliefs to emotion and mental health.
+Taken together, findings across Study 1 and 2 suggest that self-perceived interoceptive accuracy is a differentiated construct, varying systematically across distinct bodily systems. Beliefs about gastrointestinal  accuracy, in particular, showed the most consistent associations with affective and dispositional features. Although modest in magnitude, these effects emphasize the value of considering domain-specificity when linking interoceptive beliefs to emotion and mental health. Clinically, the domain-specific structure of the IAS highlights that interoceptive disruptions in affective and psychopathological conditions may center primarily on beliefs about visceral sensations rather than global interoceptive deficits. This perspective suggests new routes for targeted assessment and intervention focusing on specific bodily domains. 
 
 <!-- Methodological and applied considerations -->
-Methodologically, combining traditional psychometrics with network-based approaches proved valuable. EGA complemented, and often surpassed, factor analysis by identifying meaningful inter-item dependencies, producing a more interpretable and stable structure. The refined 14-item IAS balances parsimony and predictive validity, illustrating how network-informed scale refinement [@golino2017exploratory] can enhance construct clarity.
+Our results also suggest use of the refined 14-item IAS which balances parsimony and predictive validity, illustrating how network-informed scale refinement [@golino2017exploratory] can enhance construct clarity. Methodologically, combining traditional psychometrics with network-based approaches was valuable with EGA complementing, and often surpassing, factor analysis by identifying meaningful inter-item dependencies to produce a more interpretable and stable structure. 
 
-The IAS nonetheless remains limited in scope. Pairing items improved interpretability and outperformed an overall score of self-reported interoceptive accuracy in associations with affective and dispositional traits, but dimensions with only two items (one per bodily domain) remain suboptimal, particularly for constructs that are broad or conceptually ambiguous [@allen2022single], such as beliefs about interoceptive accuracy across multiple bodily systems.
+Nevertheless, use of the 14-item IAS should be carefully considered. Although item pairs  improved interpretability and outperformed the overall IAS  in associations with affective and dispositional traits, dimensions with only two items (one per bodily domain) remain suboptimal. This is particularly true for constructs that are broad or conceptually ambiguous [@allen2022single] such as beliefs about interoceptive accuracy across multiple bodily systems. 
 
-Because perceived accuracy in one system can generalize to conceptually or functionally related sensations, two-item clusters may overemphasize these links and fail to capture variability across unrelated domains, while overall scores risk obscuring meaningful relationships.This limitation is especially important given that researchers may assume interoceptive abilities generalize across bodily domains, when in fact they do not. Building on @desmedt2022measures' observation of a "jingle fallacy" in using self-reported interoceptive measures, the present findings extend this caution by highlighting that assuming beliefs replicate across domains constitutes a similar caveat.
-
-Additionally, the IAS items lack contextual specification (e.g., physiological vs. affective triggers). For instance, a racing heart could signal anxiety or exercise; without context, it is unclear which state participants referenced from. Such ambiguities may constrain ecological validity and contribute to variability across studies [@vlemincx2023novel]. Expanding item content and adopting context-specific phrasing will be important for future measurement development to more comprehensively capture interoceptive beliefs.
-
-Clinically, the domain-specific structure of the IAS highlights that interoceptive disruptions in affective and psychopathological conditions may center primarily on beliefs about visceral sensations rather than global interoceptive deficits. This perspective suggests new routes for targeted assessment and intervention focusing on specific bodily domains.
+Importantly, because perceived accuracy in one domain can generalize to conceptually or functionally related sensations, two-item clusters may overemphasize these links whilst simultaneously failing to capture variability across unrelated domains. However, use of overall scores  risks obscuring meaningful relationships between domain-specific items entirely, and rests on the assumption that interoceptive abilities generalize across bodily domains. Building on @desmedt2022measures' observation of a “jingle fallacy” in using self-reported interoceptive measures, the present results also suggest that researchers should be cautious in assuming self-reported accuracy generalises across domains and can be captured with a single construct. 
 
 <!-- Limitations and future directions -->
-Nonetheless, the current work is not without its limiations. This study focused exclusively on the IAS and did not evaluate the structure or subjective correlates of other commonly used interoception questionnaires, such as the BPQ or MAIA. Because the IAS uniquely targets interoceptive self-reported accuracy our focus was on its structure and correlates rather than introducing established measures with documented shortcomings [@ferentzi2021examining; @rogowska2023validation; @campos2021; @vig2023self].
+Although our  study focused exclusively on the IAS future research should re-evaluate the structure and dispositional correlates of other commonly used interoception questionnaires, such as the BPQ or MAIA, which have documented shortcomings [@ferentzi2021examining; @rogowska2023validation; @campos2021; @vig2023self] ideally with a mega-analytic approach.  
 
-Another limitation is the lack of objective measures of interoceptive accuracy in this study. Incorporating cardiac, resporatory, and gastric performance-based measures would allow investigation of how beliefs about one's interoceptive accuracy relate to actual performance. Such comparisons could clarify whether domain-specific self-reports reflect true perceptual sensitivity or primarily capture metacognitive and conceptual beliefs. Although prior research has shown weak or absent correlations between subjective and objective measures within the same domain [e.g., cardiac accuracy vs subjective accuracy, @brand2023; @petzke2024somatic; @arslanova2022], examining additional modalities, such as gastric perception, could reveal whether these patterns generalize across other interoceptive systems.
+Future research might also profitably incorporate objective measures of interoceptive accuracy across specific interoceptive domains (e.g., cardiac, respiratory, and gastric performance-based measures). This would enable an investigation of how beliefs about interoceptive accuracy relate to actual performance, clarifying whether domain-specific self-reports reflect true perceptual ability or instead primarily capture metacognitive and conceptual beliefs. Although previous research reports weak or absent correlations between subjective and objective measures within the same domain [e.g., cardiac accuracy vs subjective accuracy, @brand2023; @petzke2024somatic; @arslanova2022], examining additional modalities, such as gastric perception, could reveal whether these observations generalize to other interoceptive systems.
 
 <!-- Conclusion -->
-In summary, the present study both underlines the IAS as a solid measure of self-reported interoception, yielding typical patterns of associations with external measures, and challenges its optimal structure and scoring approach, suggesting that a refined 14-item version with seven item pairs might prove more useful in capturing domain-specific interoceptive beliefs., avoiding further adding to the conceptual confusion of interoception research.
+In summary, our research demonstrates that the IAS is a solid measure of self-reported interoceptive accuracy with  typical patterns of associations with external measures. However, it also challenges its optimal structure and scoring approach, instead suggesting that a refined 14-item version with seven item pairs might better capture domain-specific interoceptive beliefs and how they relate to dispositional traits. More broadly, our results emphasize the importance and potential value of conceptualizing interoceptive processes as domain-specific rather than unidimensional and highlight the need for targeted scale refinement as well as the development of novel, context-sensitive, and multi-dimensional, interoception measures. 
 
 
 # References
