--- a/paper/1_Initial/bibliography.bib
+++ b/paper/1_Initial/bibliography.bib
@@ -18,6 +18,18 @@
   year={2023},
   publisher={Oxford University Press}
 }
+
+@article{sorokowska2021affective,
+  title={Affective interpersonal touch in close relationships: A cross-cultural perspective},
+  author={Sorokowska, Agnieszka and Saluja, Supreet and Sorokowski, Piotr and Fr{\k{a}}ckowiak, Tomasz and Karwowski, Maciej and Aavik, Toivo and Akello, Grace and Alm, Charlotte and Amjad, Naumana and Anjum, Afifa and others},
+  journal={Personality and Social Psychology Bulletin},
+  volume={47},
+  number={12},
+  pages={1705--1721},
+  year={2021},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
 @article{garfinkel2016interoceptive,
   title={Interoceptive dimensions across cardiac and respiratory axes},
   author={Garfinkel, Sarah N and Manassei, Miranda F and Hamilton-Fletcher, Giles and In den Bosch, Yvo and Critchley, Hugo D and Engels, Miriam},
@@ -329,6 +341,13 @@
   volume={73},
   year={2024},
   publisher={Elsevier}
+}
+
+@article{makowski2025mint,
+  title={The Mint Scale: A Fresh Validation of the Multimodal Interoception Questionnaire and Comparison to the MAIA, BPQ and IAS},
+  author={Makowski, Dominique and Neves, Ana and Benn, Emma and Bennett, Maisie and Poerio, Giulia},
+  year={2025},
+  publisher={OSF}
 }
 
 @article{vlemincx2023novel,
